src/parser/generated/PlSqlParser.py
# Generated from src/parser/generated/PlSql.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PlSqlParser ( Parser ):

    grammarFileName = "PlSql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'OR'", "'REPLACE'", "'PROCEDURE'", 
                     "'FUNCTION'", "'TRIGGER'", "'PACKAGE'", "'IS'", "'AS'", 
                     "'BEGIN'", "'END'", "'DECLARE'", "'EXCEPTION'", "'WHEN'", 
                     "'THEN'", "'ELSE'", "'ELSIF'", "'IF'", "'LOOP'", "'FOR'", 
                     "'WHILE'", "'RETURN'", "'CONSTANT'", "'TYPE'", "'SELECT'", 
                     "'INSERT'", "'UPDATE'", "'DELETE'", "'MERGE'", "'ON'", 
                     "'IN'", "'OUT'", "'OTHERS'", "'NULL'", "'BEFORE'", 
                     "'AFTER'", "'EACH'", "'ROW'", "'VARCHAR2'", "'NUMBER'", 
                     "'DATE'", "'BOOLEAN'", "':='", "'..'", "'='", "<INVALID>", 
                     "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", "'*'", 
                     "'/'", "';'", "','", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "OR", "REPLACE", "PROCEDURE", 
                      "FUNCTION", "TRIGGER", "PACKAGE", "IS", "AS", "BEGIN", 
                      "END", "DECLARE", "EXCEPTION", "WHEN", "THEN", "ELSE", 
                      "ELSIF", "IF", "LOOP", "FOR", "WHILE", "RETURN", "CONSTANT", 
                      "TYPE", "SELECT", "INSERT", "UPDATE", "DELETE", "MERGE", 
                      "ON", "IN", "OUT", "OTHERS", "NULL_", "BEFORE", "AFTER", 
                      "EACH", "ROW", "VARCHAR2", "NUMBER", "DATE", "BOOLEAN", 
                      "ASSIGN", "RANGE_DOTS", "EQ", "NEQ", "LTE", "GTE", 
                      "LT", "GT", "PLUS", "MINUS", "STAR", "DIV", "SEMI", 
                      "COMMA", "LPAREN", "RPAREN", "NUMBER_LITERAL", "STRING_LITERAL", 
                      "QUOTED_ID", "ID", "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_sql_script = 0
    RULE_unit = 1
    RULE_create_procedure_body = 2
    RULE_create_function_body = 3
    RULE_create_trigger = 4
    RULE_create_package = 5
    RULE_anonymous_block = 6
    RULE_procedure_name = 7
    RULE_function_name = 8
    RULE_trigger_name = 9
    RULE_package_name = 10
    RULE_table_name = 11
    RULE_variable_name = 12
    RULE_type_name = 13
    RULE_identifier = 14
    RULE_parameter_list = 15
    RULE_parameter = 16
    RULE_parameter_name = 17
    RULE_parameter_mode = 18
    RULE_datatype = 19
    RULE_declare_section = 20
    RULE_variable_declaration = 21
    RULE_constant_declaration = 22
    RULE_type_declaration = 23
    RULE_executable_section = 24
    RULE_statement = 25
    RULE_null_statement = 26
    RULE_assignment_statement = 27
    RULE_if_statement = 28
    RULE_loop_statement = 29
    RULE_sql_statement = 30
    RULE_exception_section = 31
    RULE_exception_handler = 32
    RULE_exception_name = 33
    RULE_condition = 34
    RULE_expression = 35
    RULE_term = 36
    RULE_factor = 37
    RULE_function_call = 38
    RULE_procedure_call = 39
    RULE_return_statement = 40
    RULE_expression_list = 41

    ruleNames =  [ "sql_script", "unit", "create_procedure_body", "create_function_body", 
                   "create_trigger", "create_package", "anonymous_block", 
                   "procedure_name", "function_name", "trigger_name", "package_name", 
                   "table_name", "variable_name", "type_name", "identifier", 
                   "parameter_list", "parameter", "parameter_name", "parameter_mode", 
                   "datatype", "declare_section", "variable_declaration", 
                   "constant_declaration", "type_declaration", "executable_section", 
                   "statement", "null_statement", "assignment_statement", 
                   "if_statement", "loop_statement", "sql_statement", "exception_section", 
                   "exception_handler", "exception_name", "condition", "expression", 
                   "term", "factor", "function_call", "procedure_call", 
                   "return_statement", "expression_list" ]

    EOF = Token.EOF
    CREATE=1
    OR=2
    REPLACE=3
    PROCEDURE=4
    FUNCTION=5
    TRIGGER=6
    PACKAGE=7
    IS=8
    AS=9
    BEGIN=10
    END=11
    DECLARE=12
    EXCEPTION=13
    WHEN=14
    THEN=15
    ELSE=16
    ELSIF=17
    IF=18
    LOOP=19
    FOR=20
    WHILE=21
    RETURN=22
    CONSTANT=23
    TYPE=24
    SELECT=25
    INSERT=26
    UPDATE=27
    DELETE=28
    MERGE=29
    ON=30
    IN=31
    OUT=32
    OTHERS=33
    NULL_=34
    BEFORE=35
    AFTER=36
    EACH=37
    ROW=38
    VARCHAR2=39
    NUMBER=40
    DATE=41
    BOOLEAN=42
    ASSIGN=43
    RANGE_DOTS=44
    EQ=45
    NEQ=46
    LTE=47
    GTE=48
    LT=49
    GT=50
    PLUS=51
    MINUS=52
    STAR=53
    DIV=54
    SEMI=55
    COMMA=56
    LPAREN=57
    RPAREN=58
    NUMBER_LITERAL=59
    STRING_LITERAL=60
    QUOTED_ID=61
    ID=62
    WS=63
    COMMENT=64
    MULTILINE_COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Sql_scriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PlSqlParser.EOF, 0)

        def unit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlSqlParser.UnitContext)
            else:
                return self.getTypedRuleContext(PlSqlParser.UnitContext,i)


        def getRuleIndex(self):
            return PlSqlParser.RULE_sql_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSql_script" ):
                listener.enterSql_script(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSql_script" ):
                listener.exitSql_script(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSql_script" ):
                return visitor.visitSql_script(self)
            else:
                return visitor.visitChildren(self)




    def sql_script(self):

        localctx = PlSqlParser.Sql_scriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sql_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1040192514) != 0):
                self.state = 84
                self.unit()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(PlSqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_procedure_body(self):
            return self.getTypedRuleContext(PlSqlParser.Create_procedure_bodyContext,0)


        def create_function_body(self):
            return self.getTypedRuleContext(PlSqlParser.Create_function_bodyContext,0)


        def create_trigger(self):
            return self.getTypedRuleContext(PlSqlParser.Create_triggerContext,0)


        def create_package(self):
            return self.getTypedRuleContext(PlSqlParser.Create_packageContext,0)


        def anonymous_block(self):
            return self.getTypedRuleContext(PlSqlParser.Anonymous_blockContext,0)


        def sql_statement(self):
            return self.getTypedRuleContext(PlSqlParser.Sql_statementContext,0)


        def getRuleIndex(self):
            return PlSqlParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = PlSqlParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_unit)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.create_procedure_body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.create_function_body()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.create_trigger()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.create_package()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.anonymous_block()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.sql_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_procedure_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(PlSqlParser.CREATE, 0)

        def PROCEDURE(self):
            return self.getToken(PlSqlParser.PROCEDURE, 0)

        def procedure_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlSqlParser.Procedure_nameContext)
            else:
                return self.getTypedRuleContext(PlSqlParser.Procedure_nameContext,i)


        def BEGIN(self):
            return self.getToken(PlSqlParser.BEGIN, 0)

        def executable_section(self):
            return self.getTypedRuleContext(PlSqlParser.Executable_sectionContext,0)


        def END(self):
            return self.getToken(PlSqlParser.END, 0)

        def IS(self):
            return self.getToken(PlSqlParser.IS, 0)

        def AS(self):
            return self.getToken(PlSqlParser.AS, 0)

        def OR(self):
            return self.getToken(PlSqlParser.OR, 0)

        def REPLACE(self):
            return self.getToken(PlSqlParser.REPLACE, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(PlSqlParser.Parameter_listContext,0)


        def declare_section(self):
            return self.getTypedRuleContext(PlSqlParser.Declare_sectionContext,0)


        def EXCEPTION(self):
            return self.getToken(PlSqlParser.EXCEPTION, 0)

        def exception_section(self):
            return self.getTypedRuleContext(PlSqlParser.Exception_sectionContext,0)


        def SEMI(self):
            return self.getToken(PlSqlParser.SEMI, 0)

        def DIV(self):
            return self.getToken(PlSqlParser.DIV, 0)

        def getRuleIndex(self):
            return PlSqlParser.RULE_create_procedure_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_procedure_body" ):
                listener.enterCreate_procedure_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_procedure_body" ):
                listener.exitCreate_procedure_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_procedure_body" ):
                return visitor.visitCreate_procedure_body(self)
            else:
                return visitor.visitChildren(self)




    def create_procedure_body(self):

        localctx = PlSqlParser.Create_procedure_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_create_procedure_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(PlSqlParser.CREATE)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 101
                self.match(PlSqlParser.OR)
                self.state = 102
                self.match(PlSqlParser.REPLACE)


            self.state = 105
            self.match(PlSqlParser.PROCEDURE)
            self.state = 106
            self.procedure_name()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 107
                self.parameter_list()


            self.state = 110
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 111
                self.declare_section()


            self.state = 114
            self.match(PlSqlParser.BEGIN)
            self.state = 115
            self.executable_section()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 116
                self.match(PlSqlParser.EXCEPTION)
                self.state = 117
                self.exception_section()


            self.state = 120
            self.match(PlSqlParser.END)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61 or _la==62:
                self.state = 121
                self.procedure_name()


            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 124
                self.match(PlSqlParser.SEMI)


            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 127
                self.match(PlSqlParser.DIV)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(PlSqlParser.CREATE, 0)

        def FUNCTION(self):
            return self.getToken(PlSqlParser.FUNCTION, 0)

        def function_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlSqlParser.Function_nameContext)
            else:
                return self.getTypedRuleContext(PlSqlParser.Function_nameContext,i)


        def RETURN(self):
            return self.getToken(PlSqlParser.RETURN, 0)

        def datatype(self):
            return self.getTypedRuleContext(PlSqlParser.DatatypeContext,0)


        def BEGIN(self):
            return self.getToken(PlSqlParser.BEGIN, 0)

        def executable_section(self):
            return self.getTypedRuleContext(PlSqlParser.Executable_sectionContext,0)


        def END(self):
            return self.getToken(PlSqlParser.END, 0)

        def IS(self):
            return self.getToken(PlSqlParser.IS, 0)

        def AS(self):
            return self.getToken(PlSqlParser.AS, 0)

        def OR(self):
            return self.getToken(PlSqlParser.OR, 0)

        def REPLACE(self):
            return self.getToken(PlSqlParser.REPLACE, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(PlSqlParser.Parameter_listContext,0)


        def declare_section(self):
            return self.getTypedRuleContext(PlSqlParser.Declare_sectionContext,0)


        def EXCEPTION(self):
            return self.getToken(PlSqlParser.EXCEPTION, 0)

        def exception_section(self):
            return self.getTypedRuleContext(PlSqlParser.Exception_sectionContext,0)


        def SEMI(self):
            return self.getToken(PlSqlParser.SEMI, 0)

        def DIV(self):
            return self.getToken(PlSqlParser.DIV, 0)

        def getRuleIndex(self):
            return PlSqlParser.RULE_create_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_function_body" ):
                listener.enterCreate_function_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_function_body" ):
                listener.exitCreate_function_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_function_body" ):
                return visitor.visitCreate_function_body(self)
            else:
                return visitor.visitChildren(self)




    def create_function_body(self):

        localctx = PlSqlParser.Create_function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_create_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(PlSqlParser.CREATE)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 131
                self.match(PlSqlParser.OR)
                self.state = 132
                self.match(PlSqlParser.REPLACE)


            self.state = 135
            self.match(PlSqlParser.FUNCTION)
            self.state = 136
            self.function_name()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 137
                self.parameter_list()


            self.state = 140
            self.match(PlSqlParser.RETURN)
            self.state = 141
            self.datatype()
            self.state = 142
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 143
                self.declare_section()


            self.state = 146
            self.match(PlSqlParser.BEGIN)
            self.state = 147
            self.executable_section()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 148
                self.match(PlSqlParser.EXCEPTION)
                self.state = 149
                self.exception_section()


            self.state = 152
            self.match(PlSqlParser.END)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61 or _la==62:
                self.state = 153
                self.function_name()


            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 156
                self.match(PlSqlParser.SEMI)


            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 159
                self.match(PlSqlParser.DIV)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_triggerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(PlSqlParser.CREATE, 0)

        def TRIGGER(self):
            return self.getToken(PlSqlParser.TRIGGER, 0)

        def trigger_name(self):
            return self.getTypedRuleContext(PlSqlParser.Trigger_nameContext,0)


        def ON(self):
            return self.getToken(PlSqlParser.ON, 0)

        def table_name(self):
            return self.getTypedRuleContext(PlSqlParser.Table_nameContext,0)


        def BEGIN(self):
            return self.getToken(PlSqlParser.BEGIN, 0)

        def executable_section(self):
            return self.getTypedRuleContext(PlSqlParser.Executable_sectionContext,0)


        def END(self):
            return self.getToken(PlSqlParser.END, 0)

        def BEFORE(self):
            return self.getToken(PlSqlParser.BEFORE, 0)

        def AFTER(self):
            return self.getToken(PlSqlParser.AFTER, 0)

        def INSERT(self):
            return self.getToken(PlSqlParser.INSERT, 0)

        def UPDATE(self):
            return self.getToken(PlSqlParser.UPDATE, 0)

        def DELETE(self):
            return self.getToken(PlSqlParser.DELETE, 0)

        def IS(self):
            return self.getToken(PlSqlParser.IS, 0)

        def AS(self):
            return self.getToken(PlSqlParser.AS, 0)

        def OR(self):
            return self.getToken(PlSqlParser.OR, 0)

        def REPLACE(self):
            return self.getToken(PlSqlParser.REPLACE, 0)

        def FOR(self):
            return self.getToken(PlSqlParser.FOR, 0)

        def EACH(self):
            return self.getToken(PlSqlParser.EACH, 0)

        def ROW(self):
            return self.getToken(PlSqlParser.ROW, 0)

        def SEMI(self):
            return self.getToken(PlSqlParser.SEMI, 0)

        def DIV(self):
            return self.getToken(PlSqlParser.DIV, 0)

        def getRuleIndex(self):
            return PlSqlParser.RULE_create_trigger

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_trigger" ):
                listener.enterCreate_trigger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_trigger" ):
                listener.exitCreate_trigger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_trigger" ):
                return visitor.visitCreate_trigger(self)
            else:
                return visitor.visitChildren(self)




    def create_trigger(self):

        localctx = PlSqlParser.Create_triggerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_create_trigger)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(PlSqlParser.CREATE)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 163
                self.match(PlSqlParser.OR)
                self.state = 164
                self.match(PlSqlParser.REPLACE)


            self.state = 167
            self.match(PlSqlParser.TRIGGER)
            self.state = 168
            self.trigger_name()
            self.state = 169
            _la = self._input.LA(1)
            if not(_la==35 or _la==36):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 170
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 469762048) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 171
            self.match(PlSqlParser.ON)
            self.state = 172
            self.table_name()
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 173
                self.match(PlSqlParser.FOR)
                self.state = 174
                self.match(PlSqlParser.EACH)
                self.state = 175
                self.match(PlSqlParser.ROW)


            self.state = 178
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 179
            self.match(PlSqlParser.BEGIN)
            self.state = 180
            self.executable_section()
            self.state = 181
            self.match(PlSqlParser.END)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 182
                self.match(PlSqlParser.SEMI)


            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 185
                self.match(PlSqlParser.DIV)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_packageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(PlSqlParser.CREATE, 0)

        def PACKAGE(self):
            return self.getToken(PlSqlParser.PACKAGE, 0)

        def package_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlSqlParser.Package_nameContext)
            else:
                return self.getTypedRuleContext(PlSqlParser.Package_nameContext,i)


        def END(self):
            return self.getToken(PlSqlParser.END, 0)

        def IS(self):
            return self.getToken(PlSqlParser.IS, 0)

        def AS(self):
            return self.getToken(PlSqlParser.AS, 0)

        def OR(self):
            return self.getToken(PlSqlParser.OR, 0)

        def REPLACE(self):
            return self.getToken(PlSqlParser.REPLACE, 0)

        def SEMI(self):
            return self.getToken(PlSqlParser.SEMI, 0)

        def DIV(self):
            return self.getToken(PlSqlParser.DIV, 0)

        def getRuleIndex(self):
            return PlSqlParser.RULE_create_package

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_package" ):
                listener.enterCreate_package(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_package" ):
                listener.exitCreate_package(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreate_package" ):
                return visitor.visitCreate_package(self)
            else:
                return visitor.visitChildren(self)




    def create_package(self):

        localctx = PlSqlParser.Create_packageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_create_package)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(PlSqlParser.CREATE)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 189
                self.match(PlSqlParser.OR)
                self.state = 190
                self.match(PlSqlParser.REPLACE)


            self.state = 193
            self.match(PlSqlParser.PACKAGE)
            self.state = 194
            self.package_name()
            self.state = 195
            _la = self._input.LA(1)
            if not(_la==8 or _la==9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 199
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 196
                    self.matchWildcard() 
                self.state = 201
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

            self.state = 202
            self.match(PlSqlParser.END)
            self.state = 204
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61 or _la==62:
                self.state = 203
                self.package_name()


            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 206
                self.match(PlSqlParser.SEMI)

